--- a/src/sass/_styles.scss
+++ b/src/sass/_styles.scss
@@ -1438,6 +1438,7 @@ iframe {
     .how-its-made-content {
         display: flex;
         gap: 20px;
+        border-radius: 20px;
     }
 
     .how-its-made-video {
