--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,7 @@
   <!-- HEADER -->
   <header class="header">
     <div class="header-container">
-      <a href="#" class="logo-link link"><span class="logo-link-ital">SIMPLY&nbsp;</span>CHOCOLATE
+      <a href="./index.html" class="logo-link link"><span class="logo-link-ital">SIMPLY&nbsp;</span>CHOCOLATE
         <svg class="logo-icon">
           <use href="./images/icons.svg#icon-chocolate"></use>
         </svg>
@@ -10,7 +10,7 @@
       <nav class="nav-header">
         <ul class="list nav-list">
           <li class="nav-item">
-            <a href="#" class="nav-link link">Home</a>
+            <a href="./index.html" class="nav-link link">Home</a>
           </li>
           <li class="nav-item">
             <a href="#how_made" class="nav-link link">How it’s made?</a>
