--- a/src/partials/howitsmade.html
+++ b/src/partials/howitsmade.html
@@ -5,7 +5,7 @@
             HOW IT’S<span class="how-its-made-title-two"> MADE?</span>
         </h2>
         <div class="how-its-made-content">
-            <iframe width="560" height="400" src="https://www.youtube.com/embed/xPe1jMuX32s?si=noar2uBB4VxW0sZ2"
+            <iframe class="how-its-made-video" width="560" height="400" src="https://www.youtube.com/embed/xPe1jMuX32s?si=noar2uBB4VxW0sZ2"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen></iframe>
